Viewable test change

--- a/app/assets/javascripts/Drug/Drug.html
+++ b/app/assets/javascripts/Drug/Drug.html
@@ -42,7 +42,7 @@
         <div style="display:inline">
           <button class="btn btn-default" id="upvoteButton" type="submit" ng-click="upvote()" style="padding-top:7px;">
             <span class="fa fa-thumbs-up"></span>
-            Upvote
+            Up Vote
           </button>
         </div>
         <strong><div id="upvoteCount" class="col" style="display:inline">{{drug.upvotes}}</div></strong>
